# StoreSim

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  postgress.sql  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
app/: __init__.py  db.py  main.py
app/static/: index.html
data/: postgres.dvc
data/processed/: .gitignore  amazon_products_2023.dvc
data/raw/: amazon_products_2023.dvc
scripts/: download_dataset.py  extract_amazon_dataset.py  import_to_postgres.py  setup_branch_protection.sh
storesim/: __init__.py  embeddings.py  model.py  similarity.py
storesim/embedding_model/: base.py  model.py
storesim/vector_store/: base.py  milvus.py
tests/: conftest.py  test_embeddings.py  test_model.py  test_similarity.py
