[tool.poetry]
name = "storesim"
version = "0.1.0"
description = "Store product similarity search using CLIP ResNet50"
authors = ["StoreSim"]
readme = "README.md"
packages = [{include = "storesim"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
ftfy = ">=6.0.0"
regex = ">=2023.0.0"
tqdm = ">=4.65.0"
Pillow = ">=9.0.0"
numpy = ">=1.24.0"
clip = {git = "https://github.com/openai/CLIP.git"}
datasets = ">=2.14.0"
huggingface-hub = ">=0.20.0"
scikit-learn = ">=1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
dvc = ">=3.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=storesim --cov-report=term-missing"

[tool.coverage.run]
source = ["storesim"]
omit = ["tests/*"]
